
This release modified the tuned profile intel_hepo script to start lpmd as a daemon
The log can be viewed in /var/log/syslog
AC/DC log is added to the binary to verify the workload type in battery 

Known issue:
1) kill the lpmd will stop the intel_lpmd service and the service does not restart 


List of all JIRAs fixed:

List of all bugs fixed:
https://jira.devtools.intel.com/browse/LNUX-7742




****************************************************************************
7/24/2024
pkg.OPT.HEPO release notes
package name: pkg.OPT.HEPO-0.08.240724-x86_64
tag: pkg-hepo-0.08.240724
ww: 30.3

Support Ubuntu distro 22.04 and 24.04
Sanity checks completed on 24.04

List of all JIRAs fixed:


List of all bugs fixed:
https://jira.devtools.intel.com/browse/LNUX-7698
https://jira.devtools.intel.com/browse/LNUX-7701
https://jira.devtools.intel.com/browse/LNUX-7479
https://jira.devtools.intel.com/browse/LNUX-7682
https://jira.devtools.intel.com/browse/LNUX-7702
https://jira.devtools.intel.com/browse/LNUX-7686

****************************************************************************
7/17/2024
pkg.OPT.HEPO release notes
package name: pkg.OPT.HEPO-0.07.240717-x86_64
tag: pkg-hepo-0.07.240717
ww: 29.3

Support Ubuntu distro 22.04 and 24.04
Sanity checks completed on 24.04

Special valgrind build addeded for 24.04

List of all JIRAs fixed:
https://jira.devtools.intel.com/browse/LNUX-7680
https://jira.devtools.intel.com/browse/LNUX-7681
https://jira.devtools.intel.com/browse/LNUX-7682
https://jira.devtools.intel.com/browse/LNUX-7689
https://jira.devtools.intel.com/browse/LNUX-7690

List of all bugs fixed:
https://jira.devtools.intel.com/browse/LNUX-7478


****************************************************************************

7/11/2024
pkg.OPT.HEPO release notes
package name: pkg.OPT.HEPO-0.06.240711-x86_64
tag: pkg-hepo-0.06.240711
ww: 28.4

Support Ubuntu distro 22.04 and 24.04