@@ -1908,7 +1908,7 @@ int process_cpus(int enter, enum lpm_cpu_process_mode mode)
 	process_epp_epb ();
 
 	if (lpm_cpus_cur == CPUMASK_MAX) {
-		lpmd_log_info ("Ignore Task migration\n");
+		lpmd_log_debug ("Ignore Task migration\n");
 		return 0;
 	}
 
