@@ -91,8 +91,8 @@ int state_machine_auto(int present_state)
 		 */
 		/* promote -- if not high multi-thread trend */
 		if (!max_mt_detected(INIT_MODE)) {
-            lpmd_log_info("INIT_MODE to PERF_MODE\n");			
-			prep_state_change(INIT_MODE, PERF_MODE, 0);
+            lpmd_log_info("INIT_MODE to NORM_MODE\n");			
+			prep_state_change(INIT_MODE, NORM_MODE, 0);
 			break;
 		}
 		// stay -- full MT
@@ -141,7 +141,7 @@ int state_machine_auto(int present_state)
 		if (perf_count && burst_rate_breach())
 			break;
 		// Promote -- all else
-        lpmd_log_info("All else RESP_MODE to MDRT3E_MODE\n");			
+        lpmd_log_info("RESP_MODE to MDRT3E_MODE\n");			
 		prep_state_change(RESP_MODE, MDRT3E_MODE, 0);
 		break;
 	case MDRT4E_MODE:
