@@ -495,7 +495,7 @@ static int get_state_mapping(enum lp_state_idx state){
             return WLT_SUSTAINED;
 		}
         else{
-		lpmd_log_info("NOT AC_CONNECTED: WLT_SUSTAINED_BAT\n");			
+		lpmd_log_info("Powered by battery: WLT_SUSTAINED_BAT\n");			
             return WLT_SUSTAINED_BAT;
 		}
             
@@ -508,7 +508,7 @@ static int get_state_mapping(enum lp_state_idx state){
     	    return WLT_BATTERY_LIFE;
 		}
     	else {
-			lpmd_log_info("NOT AC_CONNECTED: WLT_BATTERY_LIFE_BAT\n");			
+			lpmd_log_info("Powered by battery: WLT_BATTERY_LIFE_BAT\n");			
         	return WLT_BATTERY_LIFE_BAT;
 		}	
 	case DEEP_MODE:							
@@ -546,13 +546,14 @@ int prep_state_change(enum lp_state_idx from_state, enum lp_state_idx to_state,
 	if (!reset && state_support_freq_ctl(from_state))
 		unclamp_default_freq(from_state);
 #if 0
+	//epp and epb are updated in the main 
 	update_state_epp(to_state);
 	update_state_epb(to_state);
 #endif
     //switch(to_state)
     //do to_state to WLT mapping
     int type = get_state_mapping((int)to_state); 
-    lpmd_log_info("proxy WLT state value :%d\n", type);
+    lpmd_log_debug("proxy WLT state value :%d\n", type);
 	set_workload_hint(type);
 
 	set_cur_state(to_state);
