@@ -21,6 +21,10 @@ List of all JIRAs fixed:
 List of all bugs fixed:
 https://jira.devtools.intel.com/browse/LNUX-7742
 
+https://jira.devtools.intel.com/browse/LNUX-7479
+https://jira.devtools.intel.com/browse/LNUX-7748
+https://jira.devtools.intel.com/browse/LNUX-7745
+
 
 
 
